02-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ci
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
